# fonts-tweak-tool

./: Makefile  README.md  fonts-tweak-tool-sigint.patch  fonts-tweak-tool-sitearchdir.patch  fonts-tweak-tool.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  fonts-tweak-tool
src/data/: Makefile.am  Makefile.in  chooser.ui  fonts-tweak-alias.ui  fonts-tweak-lang.ui  fonts-tweak-prop.ui  fonts-tweak-subst.ui
src/fontstweak/: Makefile.am  Makefile.in  aliasui.py  chooserui.py  fonts-tweak-resources.h  fontstweak.py  gresource.xml  langui.py  propui.py  substui.py  util.py
src/po/: POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  bg.po  bn.po  bn_IN.po  brx.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  (+39 more)
