NULL =
EXTRA_DIST =			\
	$(ui_files)		\
	$(localelist_DATA)	\
	$(NULL)

##
ui_files =			\
	chooser.ui		\
	fonts-tweak-alias.ui	\
	fonts-tweak-lang.ui	\
	fonts-tweak-prop.ui	\
	fonts-tweak-subst.ui	\
	$(NULL)

##
localelistdir = $(datadir)/fonts-tweak-tool
localelist_DATA =	\
	locale-list	\
	$(NULL)

-include $(top_srcdir)/git.mk
